horizontal scroll fix on ios

--- a/public/src/scss/_layout.scss
+++ b/public/src/scss/_layout.scss
@@ -191,6 +191,8 @@ html {
 @media(max-width: 768px) {
   .scrollable-list {
     overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    height:100%;
     flex-wrap: nowrap;
   }
 
